[gd_scene load_steps=23 format=3 uid="uid://do6vv53psm4aw"]

[ext_resource type="Texture2D" uid="uid://du4s28sxwxp3o" path="res://ASSETS/Art/player_idle.png" id="1_4i36l"]
[ext_resource type="Script" path="res://SCRIPTS/player.gd" id="1_m7osi"]
[ext_resource type="PackedScene" uid="uid://dgoa58t7jc0uw" path="res://SCENES/net.tscn" id="2_122k5"]
[ext_resource type="PackedScene" uid="uid://vgklta6kvogj" path="res://SCENES/staff.tscn" id="4_3kr0a"]
[ext_resource type="Texture2D" uid="uid://s3o1x51lqguu" path="res://ASSETS/Art/player_move.png" id="5_fwf0l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rb82s"]
radius = 24.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_8jbok"]
size = Vector2(48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tequt"]
atlas = ExtResource("1_4i36l")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5h3a"]
atlas = ExtResource("1_4i36l")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g376b"]
atlas = ExtResource("1_4i36l")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_msmbx"]
atlas = ExtResource("1_4i36l")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfl4p"]
atlas = ExtResource("5_fwf0l")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulwyd"]
atlas = ExtResource("5_fwf0l")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppdrh"]
atlas = ExtResource("5_fwf0l")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed4j7"]
atlas = ExtResource("5_fwf0l")
region = Rect2(384, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_h2eb6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tequt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5h3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g376b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msmbx")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfl4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulwyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppdrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed4j7")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1qrl0"]
radius = 48.0

[sub_resource type="Animation" id="Animation_7628l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tool/Net:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(66, -45)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tool/Net:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.795401]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tool/Net:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Tool/Staff:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gwpix"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tool/Net:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(66, -45), Vector2(6, -62), Vector2(-66, -45), Vector2(6, -62), Vector2(66, -45)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tool/Net:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.0872665]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tool/Net:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Tool/Staff:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_8pk0c"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_bjd88"]
resource_name = "move"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_he0rg"]
_data = {
"RESET": SubResource("Animation_7628l"),
"attack": SubResource("Animation_gwpix"),
"idle": SubResource("Animation_8pk0c"),
"move": SubResource("Animation_bjd88")
}

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_mask = 5
script = ExtResource("1_m7osi")

[node name="NetAttackArea" type="Area2D" parent="."]
z_index = -1
position = Vector2(0, -88)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="NetAttackArea"]
shape = SubResource("CircleShape2D_rb82s")
disabled = true

[node name="AttackTime" type="Timer" parent="NetAttackArea"]
wait_time = 0.25
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="NetAttackArea"]
texture = SubResource("PlaceholderTexture2D_8jbok")

[node name="Tool" type="Node2D" parent="."]

[node name="Net" parent="Tool" instance=ExtResource("2_122k5")]
visible = false
position = Vector2(66, -45)
rotation = -0.795401

[node name="Staff" parent="Tool" instance=ExtResource("4_3kr0a")]
position = Vector2(70, -45)
rotation = 0.225426

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 3
sprite_frames = SubResource("SpriteFrames_h2eb6")
animation = &"move"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1qrl0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_he0rg")
}
autoplay = "idle"

[connection signal="body_entered" from="NetAttackArea" to="." method="_on_net_attack_area_body_entered"]
[connection signal="timeout" from="NetAttackArea/AttackTime" to="." method="_on_attack_time_timeout"]
